tests/baselines/reference/overloadOnConstNoAnyImplementation.errors.txt
tests/cases/compiler/overloadOnConstNoAnyImplementation.ts(1,10): error TS2394: This overload signature is not compatible with its implementation signature.
tests/cases/compiler/overloadOnConstNoAnyImplementation.ts(9,8): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/overloadOnConstNoAnyImplementation.ts (2 errors) ====
    function x1(a: number, cb: (x: 'hi') => number);
             ~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 tests/cases/compiler/overloadOnConstNoAnyImplementation.ts:3:10: The implementation signature is declared here.
    function x1(a: number, cb: (x: 'bye') => number);
    function x1(a: number, cb: (x: string) => number) {
        cb('hi');
        cb('bye');
        var hm = 'hm';
        cb(hm);
        cb('uh');
        cb(1); // error
           ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    }
    
    var cb: (number) => number = (x: number) => 1;
    x1(1, cb);
    x1(1, (x: 'hi') => 1); // error
    x1(1, (x: string) => 1);